    to search for shared libraries when linking a program.

  From Charles Crain:

  - Restore the ability to do construction variable substitutions in all
    kinds of *PATH variables, even when the substitution returns a Node
    or other object.

  From Tom Epperly:

  - Allow the Java() Builder to take more than one source directory.

  From Bob Halley:

  - Make the new *FLAGS variable type work with copied Environments.

  From Chris Hoeppler:

  - Initialize the name of a Scanner.Classic scanner correctly.

  From Steven Knight:

  - Add an Execute() method for executing actions directly.

  - Support passing environment override keyword arguments to Command().

  - Fix use of $MSVS_IGNORE_IDE_PATHS, which was broken when we added
    support for $MSVS_USE_MFC_DIRS last release.

  - Make env.Append() and env.Prepend() act like the underlying Python
    behavior when the variable being appended to is a UserList object.

  - Fix a regression that prevented the Command() global function in
    0.95 from working with command-line strings as actions.

  - Fix checking out a file from a source code management system when
    the env.SourceCode() method was called with an individual file name
    or node, not a directory name or node.

  - Enhance the Task.make_ready() method to create a list of the
    out-of-date Nodes for the task for use by the wrapping interface.

  - Allow Scanners to pull the list of suffixes from the construction
    environment when the "skeys" keyword argument is a string containing
    a construction variable to be expanded.

  - Support new $CPPSUFFIXES, $DSUFFIXES $FORTRANSUFFIXES, and
    $IDLSUFFIXES.  construction variables that contain the default list
    of suffixes to be scanned by a given type of scanner, allowing these
    suffix lists to be easily added to or overridden.

  - Speed up Node creation when calling a Builder by comparing whether two
    Environments are the same object, not if their underlying dictionaries